Integrate with Spring framework